<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="album" type="com.example.proyectomoviles.models.Album"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.AlbumFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <ImageView
                    android:id="@+id/ad_cover"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="start"
                    android:background="@color/gray"
                    android:scaleType="centerInside"
                    android:contentDescription="@string/album_image_description"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/ad_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@{album.name}"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:text="Buscando América" />

                    <TextView
                        android:id="@+id/ad_release_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@{album.formattedReleaseDate}"
                        android:textSize="16sp"
                        android:textStyle="italic"
                        tools:text="1984/08/01" />

                    <TextView
                        android:id="@+id/ad_genre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="8dp"
                        android:text="@{album.genre}"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:text="Salsa" />

                    <TextView
                        android:id="@+id/ad_record_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@{album.recordLabel}"
                        android:textSize="16sp"
                        android:textStyle="italic"
                        tools:text="Elektra" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/addAlbumTrackButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|right"
                        android:layout_margin="8dp"
                        android:contentDescription="@string/fab_content_desc"
                        app:srcCompat="@drawable/ic_baseline_playlist_add_24"
                        tools:ignore="RtlHardcoded" />

                </LinearLayout>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:text="@{album.description}"
                android:textSize="16sp"
                android:textStyle="italic"
                tools:text="Descripción">

            </androidx.appcompat.widget.AppCompatTextView>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabTextAppearance="@style/MyTabLayoutTextAppearance" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
    </FrameLayout>
</layout>