<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_albumes"
        android:icon="@drawable/ic_album"
        android:title="@string/title_albumes" />

    <item
        android:id="@+id/navigation_artists"
        android:icon="@drawable/ic_artist"
        android:title="@string/title_artists" />

    <item
        android:id="@+id/navigation_collectors"
        android:icon="@drawable/ic_collectors"
        android:title="@string/title_collectors" />
</menu>