<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="collector" type="com.example.proyectomoviles.models.Collector"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.AlbumFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <TextView
                        android:id="@+id/coldName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{collector.name}"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:text="Manolo Bellon" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="15dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            tools:ignore="UselessParent">

                            <TextView
                                android:id="@+id/coldEmailLabel"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/collector_email_label"
                                android:textSize="16sp"
                                android:textStyle="bold|italic"
                                tools:text="Email: " />

                            <TextView
                                android:id="@+id/coldEmail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@{collector.email}"
                                android:textSize="16sp"
                                android:textStyle="italic"
                                tools:text="manollo@caracol.com.co" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginStart="10dp"
                            tools:ignore="UselessParent">

                            <TextView
                                android:id="@+id/coldTelephoneLabel"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/collector_telephone_label"
                                android:textSize="16sp"
                                android:textStyle="bold|italic"
                                tools:text="@string/collector_telephone_label" />

                            <TextView
                                android:id="@+id/coldTelephone"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{collector.telephone}"
                                android:textSize="16sp"
                                android:textStyle="italic"
                                tools:text="3502457896" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabTextAppearance="@style/MyTabLayoutTextAppearance" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </FrameLayout>

</layout>